tests/rosetta/out/Java/conditional-structures-7.error
parse: error[P999]: /workspace/mochi/tests/rosetta/x/Mochi/conditional-structures-7.mochi:3:5: unexpected token "fetch" (expected <ident> "(" (Param ("," Param)*)? ")" (":" TypeRef)? "{" Statement* "}")
  --> /workspace/mochi/tests/rosetta/x/Mochi/conditional-structures-7.mochi:3:5

  3 | fun fetch(): string { return "" }
    |     ^

help:
  Parse error occurred. Check syntax near this location.